--- a/apps/car/src/app/pages/pages.component.html
+++ b/apps/car/src/app/pages/pages.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<article>
+  <capicuarepo-toolbar></capicuarepo-toolbar>
+  <capicuarepo-footer></capicuarepo-footer>
+</article>
