Add emoji directive

--- a/apps/car/src/app/shared/toolbar/toolbar.component.html
+++ b/apps/car/src/app/shared/toolbar/toolbar.component.html
@@ -14,7 +14,7 @@
           ><i class="material-icons">person</i> Users Module</a
         >
         <a mat-button [routerLink]="'/sports'"
-          ><i class="material-icons">sports_soccer</i> Sports Module</a
+          ><i class="material-icons">mood</i> Sports Module</a
         >
       </div>
     </div>
@@ -47,7 +47,7 @@
         ><i class="material-icons md-18">person</i> Users Module
       </a>
       <a mat-list-item [routerLink]="'/sports'">
-        <i class="material-icons md-18">sports_soccer</i> Sports Module
+        <i class="material-icons md-18">mood</i> Sports Module
       </a>
       <a mat-list-item (click)="sidenav.toggle()" href="" mat-list-item
         >Close</a
