--- a/apps/car/src/app/login/login.component.html
+++ b/apps/car/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="logo">
     <img class="imgLogo" src="assets/images/logo.png" alt="" />
-    <h3>Entrada al sistema</h3>
+    <h3>Angular Trainning - Entrada al sistema</h3>
   </div>
   <div class="botones">
     <facebook-login-button
