--- a/apps/car/src/app/shared/toolbar/toolbar.component.html
+++ b/apps/car/src/app/shared/toolbar/toolbar.component.html
@@ -1,12 +1,17 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row class="toolbarContainer">
-    <div class="menuToolbar">
+    <div class="logoToolBar">
       <button mat-icon-button>
         <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
       </button>
-      <h1>Trainning Angular</h1>
+      <span>Trainning Angular</span>
       <span class="menu-spacer"></span>
+    </div>
+    <div class="menuToolBar">
       <div>
+        <a mat-button [routerLink]="'/dashboard'"
+          ><i class="material-icons">home</i> Home
+        </a>
         <a mat-button [routerLink]="'/photos'"
           ><i class="material-icons">photo</i> Photo Module
         </a>
@@ -18,28 +23,29 @@
         >
       </div>
     </div>
-    <div class="userDiv">
-      <div class="menuUser">
-        <span>Bienvenido, {{ usuario }}</span>
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item (click)="signOut()">
-            <mat-icon>exit_to_app</mat-icon>
-            <span>Cerrar sesión</span>
-          </button>
-        </mat-menu>
-        <img
-          [matMenuTriggerFor]="menu"
-          class="avatar"
-          src="{{ avatarSrc }}"
-          alt=""
-        />
-      </div>
+    <div class="userToolBar">
+      <span>Bienvenido, {{ usuario }}</span>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item (click)="signOut()">
+          <mat-icon>exit_to_app</mat-icon>
+          <span>Cerrar sesión</span>
+        </button>
+      </mat-menu>
+      <img
+        [matMenuTriggerFor]="menu"
+        class="avatar"
+        src="{{ avatarSrc }}"
+        alt=""
+      />
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
 <mat-sidenav-container>
   <mat-sidenav #sidenav>
     <mat-nav-list>
+      <a mat-list-item [routerLink]="'/dashboard'">
+        <i class="material-icons md-18">home</i> Home
+      </a>
       <a mat-list-item [routerLink]="'/photos'">
         <i class="material-icons md-18">photo</i> Photos Module
       </a>
@@ -55,10 +61,8 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <div fxLayout="row" fxLayoutAlign="center">
-      <div fxFlex="90%">
-        <router-outlet></router-outlet>
-      </div>
+    <div class="containerPrincipal">
+      <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
