--- a/apps/car/src/app/pages/photo/components/photo-list/photo-list.component.html
+++ b/apps/car/src/app/pages/photo/components/photo-list/photo-list.component.html
@@ -1,5 +1,5 @@
-<div fxLayout="row" fxLayoutGap="30px">
-  <div fxFlex="90%">
+<div>
+  <div>
     <h1 capicuarepoEmoji>Photo list with emoji directive</h1>
 
     <button mat-raised-button [color]="'success'" (click)="this.addPhoto()">
