--- a/apps/car/src/app/pages/sport/components/sport-list/sport-list.component.html
+++ b/apps/car/src/app/pages/sport/components/sport-list/sport-list.component.html
@@ -1,5 +1,5 @@
-<div fxLayout="row" fxLayoutGap="30px">
-  <div fxFlex="90%">
+<div>
+  <div>
     <h1>Sports list</h1>
     <button mat-raised-button [color]="'success'" (click)="this.addSport()">
       <mat-icon>add_circle</mat-icon> Add
