--- a/apps/car/src/app/shared/toolbar/toolbar.component.html
+++ b/apps/car/src/app/shared/toolbar/toolbar.component.html
@@ -21,6 +21,9 @@
         <a mat-button [routerLink]="'/sports'"
           ><i class="material-icons">mood</i> Sports Module</a
         >
+        <a mat-button [routerLink]="'/customers'"
+          ><i class="material-icons">shop</i> customers Module</a
+        >
       </div>
     </div>
     <div class="userToolBar">
@@ -54,6 +57,9 @@
       </a>
       <a mat-list-item [routerLink]="'/sports'">
         <i class="material-icons md-18">mood</i> Sports Module
+      </a>
+      <a mat-list-item [routerLink]="'/customers'">
+        <i class="material-icons md-18">shop</i> customers Module
       </a>
       <a mat-list-item (click)="sidenav.toggle()" href="" mat-list-item
         >Close</a
