--- a/apps/car/src/app/shared/toolbar/toolbar.component.html
+++ b/apps/car/src/app/shared/toolbar/toolbar.component.html
@@ -68,7 +68,11 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <div class="containerPrincipal">
-      <router-outlet></router-outlet>
+      <router-outlet>
+        <div class="cintilloSuperior">
+          <capicuarepo-resume></capicuarepo-resume>
+        </div>
+      </router-outlet>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
