--- a/apps/car/src/app/pages/photo/components/photo-list/photo-list.component.html
+++ b/apps/car/src/app/pages/photo/components/photo-list/photo-list.component.html
@@ -1,6 +1,7 @@
 <div>
   <div [@enterAnimation]>
     <h1 capicuarepoEmoji>Photo list with emoji directive</h1>
+    <h1>Total: {{ total }}</h1>
 
     <button mat-raised-button [color]="'success'" (click)="this.addPhoto()">
       <mat-icon>add_circle</mat-icon> Add
