--- a/apps/car/src/app/shared/resume/resume.component.html
+++ b/apps/car/src/app/shared/resume/resume.component.html
@@ -1,1 +1,4 @@
-<p>resume works!</p>
+<p>Photos: {{ totalPhotos }}</p>
+<p>Sports: {{ totalSports }}</p>
+<p>Users: {{ totalUsers }}</p>
+<button (click)="actualizar()">refresh</button>
