--- a/apps/car/src/app/pages/photo/components/photo-list/photo-list.component.scss
+++ b/apps/car/src/app/pages/photo/components/photo-list/photo-list.component.scss
@@ -60,3 +60,9 @@ th {
   color: rgb(20, 20, 20);
   font-size: 16px;
 }
+
+.mat-form-field {
+  font-size: 12px;
+  display: flex;
+  justify-content: flex-end;
+}
