--- a/apps/car/src/app/pages/user/components/user/user.component.css
+++ b/apps/car/src/app/pages/user/components/user/user.component.css
@@ -1,12 +1,18 @@
 table {
-    border: 1px solid black;
-    width: 100%;
+  border: 1px solid black;
+  width: 100%;
 }
 
 th.mat-sort-header-sorted {
-    color: black;
+  color: black;
 }
 
 .miestilo {
-    background-color: azure;
+  background-color: azure;
+}
+
+.mat-form-field {
+  font-size: 12px;
+  display: flex;
+  justify-content: flex-end;
 }
