--- a/apps/car/src/app/shared/resume/resume.component.html
+++ b/apps/car/src/app/shared/resume/resume.component.html
@@ -1,4 +1,11 @@
-<p>Photos: {{ totalPhotos }}</p>
-<p>Sports: {{ totalSports }}</p>
-<p>Users: {{ totalUsers }}</p>
-<button (click)="actualizar()">refresh</button>
+<div class="container">
+  <span
+    >Photos: <span>{{ totalPhotos }}</span></span
+  >
+  <span
+    >Sports: <span>{{ totalSports }}</span></span
+  >
+  <span
+    >Users: <span>{{ totalUsers }}</span></span
+  >
+</div>
